Fix object-position property in main section for improved image alignment

--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -84,7 +84,7 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: 1px;
+  object-position: -20rem;
 }
 .hero .hero__content .hero__content-stars {
   display: flex;
